<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/driver_info_layout"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingTop="8dp"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="8dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/car_display"
                    android:layout_marginLeft="50dp"/>


            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true">

                <TextView
                    android:id="@+id/txt_car_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/uber_x"
                    android:fontFamily="@font/transport_move"
                    android:textColor="#737373"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_car_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/car_number_example"
                    android:fontFamily="@font/transport_move_bold"
                    android:textColor="#737373"
                    android:textSize="20sp" />




            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingTop="8dp"
                android:paddingRight="@dimen/activity_margin"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/txt_driver_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/transport_move_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/driver_name_example"
                    android:textColor="#737373"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/ascci_dot"
                    android:textColor="#737373"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_baseline_star_24"
                    android:fontFamily="@font/transport_move_bold"
                    android:gravity="center_vertical"
                    android:text="4.83"
                    android:textColor="#737373"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/ascci_dot"
                    android:textColor="#737373"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_foreign_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/transport_move"
                    android:gravity="center_vertical"
                    android:text="@string/language_example"
                    android:textColor="#737373"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:id="@+id/img_message_trip"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_message_24"/>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>